Notify PaintLayer if ScrollsOverflow changed.

Bug: 736173
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ibafd4af308bb6eca6496d3c95afd8697b767185e