third_party/WebKit/Source/core/paint/PaintLayer.cpp
@@ -1559,7 +1559,7 @@ LayoutPoint PaintLayer::VisualOffsetFromAncestor(
   return offset;
 }
 
-void PaintLayer::DidUpdateNeedsCompositedScrolling() {
+void PaintLayer::DidUpdateScrollsOverflow() {
   UpdateSelfPaintingLayer();
 }
 
